セキュリティ進めた

--- a/LPIC/102/12.セキュリティ_問題.md
+++ b/LPIC/102/12.セキュリティ_問題.md
@@ -179,7 +179,17 @@ libwrapを使わない独自のアクセス制御機構を持つ。
 秘密鍵って公開鍵から作られるの？割と知らなかったんだが？  
 
 配布のコストとしては1体多だが、対応としては1体1ということか？
-まぁ、風呂あがってから復習だな。  
+
+うん。よく答えを見てみると使われる秘密鍵と公開鍵は1体多って書いてあるな。  
+配布の対応って文言があれば話は別だが、これは暗号と復号の関係の事だから1対1しかないわな。  
+
+- 公開鍵暗号方式は非対称暗号方式とも呼ばれる。  
+- 暗号化と復号の鍵が異なる方式。  
+- 秘密鍵を乱数で生成し、秘密鍵から大きな2つの素数の積や離散対数により公開鍵を生成する。  
+- 秘密鍵と公開鍵は1対1対応。  
+- 秘密鍵から公開鍵が計算されるが、その逆の演算は実質不可能(宇宙が出来上がるまでの時間を書ければ出来なくはないが、計算時間に対して割に合わな過ぎる。)  
+- データ送信側は受信側から事前に取得してある公開鍵でデータを暗号化して受信側に送り、受信側は自分の秘密鍵でデータを復号する。  
+- 公開鍵認証では、被認証側が自分の秘密鍵で認証データを作成して認証側に送り、認証側では被認証側の公開鍵で認証データを検証する。  
 
 ---
 
@@ -207,36 +217,95 @@ A : サーバーのホスト名、IPアドレス、公開鍵
 
 イエーイ。正解。  
 
+---
 
+## 13 ○
 
-今日はここまでを目標とする。  
-うーん。  
-意外と進まないぞ。  
-今日はこれだけで終わりそう。  
+sshファイルのknown_hostsはどこに作られますか？1ツ  
+
+→  
+sshクライアント  
+
+接続した側が知ってるホストなので、クライアントですよね。  
 
 ---
 
-## 1
+## 14 ○
+
+/etc/ssh/ssh_known_hostsファイルのは___ホストキー(公開鍵)が含まれている。  
+
+→  
+設定ディレクトリにある。  
+ホームディレクトリではない。  
+システム設定だから、システムの全てのユーザーが利用可能ではないですかね？  
+
+当たった。  
+てか、これ小豆本でもやってないな。  
+
+クライアントがパスフレーズの入力なしにサーバーにログインするホストベース認証の場合には、クライアントの公開鍵を格納し、  
+サーバーホスト上に置いてサーバーがクライアントからのアクセスを許可する際にも使用される。  
 
 ---
 
-## 1
+## 15 ×
+
+/etc/ssh_known_hostsのパーミッションはどれが適切か？  
+
+→  
+なんか600って見えた気がしたので、rootのみが読み書きできるで。  
+
+マージか。  
+Cの「全てのユーザーがreadできる」が正解な模様。  
+
+/etc/ssh_known_hostsファイルはすべてのユーザーが実行したssgコマンドが参照するファイルなので、全てのユーザーがreadできるパーミッションになっていないといけない。  
+ファイルシステムなので、書き込みはできない。  
 
 ---
 
-## 1
+## 16 ○
+
+rootがsshでログインできないようにするために、sshサーバーの設定ファイルのディレクティブの記述で正しいものはどれか？1つ。  
+
+→  
+しらねー。  
+rootユーザーがsshコマンドを使ってサーバーにログインできないようにするってこと？  
+
+Permitの問題なのだろうか。
+でもPermitがない選択肢は1つで明らかにRootユーザーのログインを許可しているのでなし。
+yesnoで選択するタイプの場合、否定のディレクティブをわざわざyesするなんて面倒な事はしないはずなので、B「PermitRootLogin no」で。  
+
+当たったー。俺の推理も割といい線言ってるんだな。  
+
+また色々設定項目があるので、詳しくまとめるなら明日だな。  
 
 ---
 
-## 1
+## 17 ○
+
+sshで外部サーバーへ接続する際に使用するオプションを編集するユーザーの設定ファイルは何ですか？  
+ファイル名のみ。  
+
+→  
+`config`  
+
+多分、.ssh/configのこと言ってるんだろうなぁと思って書いたら当たった。  
+
+どうでもいいけど、PortとかHostとかの名前ってディレクティブっていうんですね。  
+覚えておこう。  
 
 ---
 
-## 1
+## 18 ○
 
----
+sshコマンドのオプションの説明で謝っているものはどれか？1つ。  
 
-## 1
+→  
+-Pはポートではなく、プロトコルだったような？
+ポートの指定は小文字のpだったような？
+なのでB 「-Pでsshサーバーのポート番号を指定する」  
+
+あたったぜー。  
+これも詳しくはまた明日。
 
 ---
 
