--- a/Trivia/言葉の意味.md
+++ b/Trivia/言葉の意味.md
@@ -1,41 +1,49 @@
 # 言葉の意味まとめ
 
-・難儀(なんぎ)  
+## 難儀(なんぎ)  
+
 1 苦しみ悩むこと。苦労すること。また、そのさま。「腰を屈めるのも難儀だ」「雪道を行くのに難儀する」  
 2 面倒なこと。迷惑なこと。また、そのさま。「難儀をかける」「難儀な話をもちこむ」  
 3 処理するのがむずかしいこと。また、そのさま。一大事。  
 
-・「難儀やなぁ」の意味  
+### 「難儀やなぁ」の意味  
+
 主に、関西弁で他人の体験に同情、共感するなどした場合に「大変だねえ」という意味で用いられる表現。  
 「難儀」自体には「苦労、困難、面倒」といった意味がある。  
 また、自分自身が厄介な状況に陥った時に、「参ったな」という意味で用いられたり、迷惑をかける人を咎めるために用いられたりすることもある。  
 
-・瑕疵(かし)  
+## 瑕疵(かし)  
+
 通常、一般的には備わっているにもかかわらず本来あるべき機能・品質・性能・状態が備わっていないこと。  
 特定の売買契約においてその目的物に何らかの欠陥・不具合があることで、その品質や性能が損なわれている状態を指しています。  
 
-・勘当(かんどう)  
+## 勘当(かんどう)  
+
 親が子との縁を切ること。  
 すなわち懲戒の意味で、親が子を家から追放する行為をさすようになった。親族関係も当然断絶されるわけで、その意味で久離(きゅうり)の一種とも考えられる。事実、江戸町奉行(ぶぎょう)所では、久離を欠落(かけおち)久離、勘当を追出(おいだし)久離とよんで区別するようになった。
 
-・棄却(ききゃく)  
+## 棄却(ききゃく)  
+
 一般には「あるものを捨てて、以降は問題にしないこと」  
 どちらかというと、専門分野(統計学等)で用いられる言葉みたい。  
 俺はなぜこの言葉を使うのか。  
 プログラミングではあまり使わないはずだ。  
 
-・煩雑(はんざつ)  
+## 煩雑(はんざつ)  
+
 煩雑な手続きでおなじみ。  
 面倒くさいってニュアンスは十分に伝わってくるけど、実際の意味は？ということで調べた。  
 「込み入って煩わしいこと」  
 「やらねばならないことが多くあり、込み入っていること」
 →これが一番しっくり来るかな。  
 
-・煩わしい(わずらわしい)  
+### 煩わしい(わずらわしい)  
+
 「面倒で気が重い。また、入り組んで煩雑だ。」  
 つまり面倒ってことだ。  
 
-・門外漢(もんがいかん)  
+## 門外漢(もんがいかん)  
+
 「もんかんがい」って言ってしまいました。恥ずかしい。  
 違和感はあったんですけどねぇ。  
 ついでなので言葉の意味も覚えておきます。  
@@ -47,19 +55,42 @@
 
 個人的には、そのプロジェクトに関わりがない人のことだと思ってたけど、厳密には違うのな。  
 
+## 張り子の虎
+
+主体性がなく人のいうことにただ頷いている人や、首を動かす癖がある人の事。  
+また、弱いくせに虚勢を貼っている人のたとえ。  
+
+へー。悪い意味だったんだね。知らなかったわ。  
+
 ---
 
-・深謀遠慮(しんぼう-えんりょ)  
+## 深謀遠慮(しんぼう-えんりょ)  
+
 深く考えを巡らし、のちのちの遠い先のことまで見通した周到綿密な計画を立てること。  
 
-・神算鬼謀(しんさん-きぼう)  
+## 神算鬼謀(しんさん-きぼう)  
+
 人知の及ばないような、すぐれた巧みな策略のこと。  
 
-・色即是空(しき-そくぜ-くう)  
+## 色即是空(しき-そくぜ-くう)  
+
 現世に存在するあらゆる事物や現象はすべて実体ではなく、空無であるということ。  
 ▽仏教語。「色」はこの世のすべての事物や現象。「空」は固定的な実体がなく空無であること。  
 
-・乾坤一擲(けんこんいってき)  
+## 乾坤一擲(けんこんいってき)  
+
 運を天に任せ、一世一代の大勝負に出ることのたとえ。  
 All or nothing.（すべてか無か）  
 The die is cast.（賽は既に投げられた）  
+
+## 鎧袖一触(がいしゅういっしょく)
+
+鎧の袖でちょっと触れたぐらいの簡単さで敵を負かすこと。  
+相手を容易く打ち負かしてしまうたとえ。  
+弱い敵に容易く一撃を加えるたとえ。  
+
+類語 : 「赤子の手をひねる」「他愛もない」「朝飯前」  
+
+例文 :  
+「世界ランク1位の選手は、鎧袖一触の強さであった」  
+「あの大企業は今年度も鎧袖一触の状況である」  
