102セキュリティ問題完了

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -213,12 +213,23 @@ Wikiの説明がいちいち面白い。
 
 ---
 
-## イミディエイト クリップボード コピー
+## ファイナンス
 
-`Clipboard.SetText()`
+会社が事業のために資金を調達・運用すること。
+目的は企業価値を向上させること。  
 
-<https://dobon.net/vb/dotnet/string/clipboard.html>
-Clipboard.SetTextメソッドを使えば、簡単に文字列をクリップボードにコピーできます。
+ファイナンスは財務。アカウンティングは会計。  
+
+アカウンティングは過去の確定した利益を扱う分野。  
+損益計算書や貸借対照表の作成を行う。  
+
+ファイナンスは未来の現金を扱う。  
+将来の収益を生み出すための資金調達や投資等を行う。  
+
+アカウンティングが会計分野で貸借対照表を扱うなら、それはもう簿記では？
+簿記 = 会計?
+まぁ、簿記会計っていうくらいだしなぁ。
+念のためそこの関連性も調べるけど。
 
 ---
 
