--- a/BookKeeping/用語など.md
+++ b/BookKeeping/用語など.md
@@ -23,8 +23,7 @@
 
 簿記では売掛金を資産として、単純に現金に換える処理しかしなかったわけだが、あれって実務ではものすごい数があるわけで、  
 どの売掛金が何に対しての売り上げに当たるのか確認する作業も必要になってくるのだろう。  
-その作業が消込ってわけだ。  
-何と何がなんのペアなのか、当てはめては消していくから消込。  
+何と何がなんのペアなのか、当てはめて消していくその作業が消込ってわけだ。  
 タイミング的には、借方:当座,貸方:売掛金 となった時が消込完了と言える。  
 売掛金が0円になって当座預金に振り込まれたから。  
 
@@ -84,6 +83,16 @@
 確かに1円の違いが絶対に生じる。  
 1円の違いでも間違ったらヤバい。  
 
+内税は消費税を含んだ価格。  
+例えば1000円の場合、消費税は100円なので、1100円が内税価格となるわけだが、  
+こいつは消費税を含んでいるので、110%の価格という事になる。  
+だから本体価格を求めるなら、110％で割れば本体価格になるってわけ。  
+そのまま本体価格を税込み価格から引けば内税を算出できる。  
+
+消費税を直で求める場合は、110%の内の10%を求めたいので、10/110をあげればよい。というわけだろうかね。  
+
+## 調整額
+
 ---
 
 ## 締め とは？
@@ -109,6 +118,22 @@
 数値を一定の規則に従って、近似値で表現すること。  
 端数処理。  
 普段何気なくやっている、四捨五入とか切り捨て、切り上げが丸め処理って事。  
+
+---
+
+## 原簿
+
+``` txt
+写しでない、元の帳簿。
+事務上一番もとになる帳簿。
+```
+
+ECOの収入原簿印刷のアレ。  
+原簿では出てくるが収入原簿では市役所の小難しい話しかヒットしない。  
+俺は意味が知りたいのだが？  
+
+調べても出てこない。  
+恥を忍んで聞いてみるか。  
 
 ---
 
@@ -148,6 +173,8 @@
 そのほかにも色々あるけど、代表的なのはこんなところじゃないかな。  
 因みによく聞く103万円ってのは所得税が発生するラインが103万円だからっぽい。  
 
+---
+
 ## 従食(じゅうしょく)とは？まかないとは？
 
 [ファミレス各社の従食（まかない）どこが豪華で美味しい？](https://tenshoku-restaurants.com/blog/272)  
@@ -159,3 +186,51 @@
 →  
 従食は「有料」  
 まかないは「無料」  
+
+## レベニューマネジメント
+
+[レベニューマネジメントとは？概要や実施手順、活用事例を紹介](https://www.onemarketing.jp/knowledge/word/revenue-management)  
+
+顧客の需要に応じて商品やサービスの料金を変動させるマネジメント手法。  
+ホテル業界や航空業界など、在庫を繰越せない産業で活用される。  
+
+コスト占める固定費の比率が高く、利用する顧客数との関連も薄いケースがほとんど。  
+商品やサービスが売れ残ると全損となるため、少しでも多く売り切るために採用されている。  
+
+### レベニューマネジメントにおける考え方
+
+レベニューマネジメントは「全ての商品を売り切ることが収益の最大化につながる」という考え方を基礎としている。  
+正規の料金で商品を購入する顧客のために在庫を確保し、余りそうな部分を割安の料金設定で売り切る手法。  
+
+レベニューマネジメントの正当性は、理論的には需要曲線で説明できます。  
+需要曲線では、需要と供給が釣りあう場所で価格が決まりますが、価格弾力性が高い業界では、同じ商品でも時期によって需要の高さが異なります。  
+そこで、それぞれのタイミングごとに適切な料金を設定し、すべての商品を売り切る工夫をします。  
+
+### 手順
+
+需要を予測する
+販売方法を決める
+効果を検証する
+
+需要を予測する
+需要の大きさに応じて、価格を変動させるレベニューマネジメントでは、いかに正確に需要を予測するかが成否のカギとなります。需要を予測するポイントは、予想される顧客をパターン別に分類することです。
+
+例えば、ホテルを例に考えてみましょう。家族で旅行をする場合、複数のホテルを比較して選ぶ余裕があるため、施設の条件が同じなら、料金が安いホテルを選びます。一方、出張中のビジネスマンは、宿泊場所の確保が最優先事項であるため、高めの料金設定でも予約する可能性があります。このように、顧客をパターン別に分類して需要を予測した上で、適切に商品を割り振ることが重要です。
+
+販売方法を決める
+次に、予測した需要に基づいて、利益を最大化できる販売方法を検討します。先述の例では、早期に予約するファミリー層などの顧客には、割引料金で部屋を提供します。これは、早めに予約を受け付けて、利益を確定するのが安定的な経営につながるためです。
+
+しかし、すべての部屋を早期割引料金で埋めると、直前に高い料金でチェックインする顧客からの利益を逃してしまいます。そこで、早期割引枠に割り当てる部屋と、直前の予約枠に割り当てる部屋の数を、予測した需要に応じて決定する必要があります。
+
+効果を検証する
+レベニューマネジメントでは、選択した販売方法の効果を検証するのも、重要なポイントです。予測に基づいて設定した収益目標と、実際の収益を比較し、どの程度の差が生じているのかを確認しましょう。実際の収益が目標に到達しなかった場合は、その理由を見極めて、問題点を改善する必要があります。設定料金や顧客のパターン別に、確保した商品の数を検証し、常にPDCAサイクルを回しながら、レベニューマネジメントを実践してください。
+
+レベニューマネジメントを行う際の注意点
+ここでは、レベニューマネジメントにおいて、顕在化しやすい2つの注意点について解説します。
+
+販売価格の不平等
+レベニューマネジメントにおいては、顧客が予約するタイミングに応じて、商品の金額を変更します。商品の需要が大きくなるほど料金は高くなるため、繁忙期などに料金が跳ね上がるのは、やむを得ないといえるでしょう。しかし、同じ商品であるにもかかわらず、料金が異なる事実を顧客が知った場合、気分を害する可能性もあります。レベニューマネジメントでは、販売価格の極端な不平等によって、顧客が感情を害さないように気を付けなければなりません。
+
+オーバーブック
+提供できる商品の数以上に、予約を受け付けることを「オーバーブック」といいます。商品の売り切りが最重要事項であるレベニューマネジメントでは、一定のキャンセルが出ることを見越して、オーバーブックを行うのも必要な戦略です。ただし、オーバーブックが多すぎて当日に断る事態になると、顧客からの信頼を損なうリスクがあります。また、代わりの商品を用意したり、送迎したりするリカバリーには、コストもかかるでしょう。しかし、オーバーブックなしで商品を売り切るのは難しいため、需要の大きさを精密に予測する必要があります。
+
