--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -16,3 +16,13 @@
 ## systemctl  
 
 システム起動時のサービス起動デーモンsystemdのコントロール用コマンド  
+
+---
+
+## ナイス値
+
+プロセスの優先度を表す値。  
+-20から19まであり、-20が一番高い。  
+デフォルトは0。  
+
+[プロセス優先度(NICE値)を変更する方法](https://qiita.com/hana_shin/items/438dfe93a765ffa337ae)
