--- a/Trivia/言葉の意味.md
+++ b/Trivia/言葉の意味.md
@@ -64,38 +64,16 @@
 
 ## 約款(やっかん)
 
-約款（やっかん）とは、多数の相手と同一の内容の契約を結ばなけれなならない性質の取引において、あらかじめ定型的に定められた契約の条項の総体のことである。厳密に「普通契約約款」「普通取引約款」「普通約款」「普通契約条款」などともいう。法律の分野で用いられる専門的な用語である。
-
+多数の相手と同一の内容の契約を結ばなけれなならない性質の取引において、あらかじめ定型的に定められた契約の条項の総体のことである。
+法律の分野で用いられる専門的な用語。
 「約款」を構成する「約」は取り決め、「款」は法令などの項目の意である。
+ソフトウェアの利用許諾契約など、多数の相手と同一の内容の契約を結ぶ必要がある場合に広く用いられている。
 
-約款は、鉄道などの運送契約、保険契約、電気やガスなどの供給契約、宿泊契約、預金契約、ソフトウェアの利用許諾契約など、多数の相手と同一の内容の契約を結ぶ必要がある場合に広く用いられている。約款には、多数の取引を迅速かつ画一的に処理できるという利点がある反面、一方の当事者には内容に交渉の余地がないことが問題になることもある。
-
-約款の具体的な例としては、運送契約における運送約款、保険契約における保険約款、電気供給契約における電気供給約款、インターネット通販における購入約款、インターネットサイトの利用規約、ソフトウェアのライセンス規約などを挙げられる。保険約款は、通常の保険契約に関する普通保険約款と、普通保険約款の内容を変更ないし補充した特別保険約款（いわゆる特約）とに区別される。法学では、これら典型的な約款のほかに、切符に記された文言や、売買契約に関して店員が口頭で広く呼びかけている条件なども約款に含みうると解される。
-
-一般に契約においては、当事者はその内容を認識し意思表示して初めて契約に拘束されるが、企業と顧客が約款によって契約を行おうとする場合、顧客の側は約款の個別の条項を認識していない場合が多く、約款の法的拘束力がどのように生じるのかについては議論がある。大判大正4年12月24日民録21輯2182頁は、約款による旨を記載した書面により申し込まれた契約において、約款の内容を顧客が知らなくても、約款によって契約する意思があるものと推定されると判示しているが、学説では批判も多い。
-
-2020年4月1日施行の改正民法では、ある特定の者が不特定多数の者を相手方として行うもので、その内容が画一的であることがその双方にとって合理的な取引（「定型取引」という）において、契約の内容とすることを目的としてその特定の者により準備された条項の総体が「定型約款」であると定義され、定型約款が契約の内容となるための要件などが規定された。
-
-なお、約款による契約のように、契約の内容があらかじめ決められており、相手方がその内容に従わざるを得ないような契約を「付合契約」あるいは「付従契約」という。
-
-また「約款」は、契約や条約の個別の条項を指すこともある（例、「失権約款」「最恵国約款」）。
-
-「定款」は、社団法人の目的、組織、活動等に関する根本規則およびそれを記した書面のことで、「約款」とは異なる。
-
-約款の用例：
-約款を定める
-約款を詳細に読む
-約款の内容を説明する
-約款に定める条件
-
-（執筆：稲川智樹）
-
-デジタル大辞泉 索引トップ用語の索引ランキング凡例
-デジタル大辞泉デジタル大辞泉
-やっ‐かん〔ヤククワン〕【約款】
 １ 条約・契約などに定められている個々の条項。「条約の約款に違反する」
-
 ２ 保険や運送など不特定多数の利用者との契約を処理するため、あらかじめ定型的に定められた契約条項。保険約款・運送約款など。
+
+読み方を忘れないために記録しただけなのだが、意味的にはエライややこしい。  
+乙が～甲が～って永遠と繰り返して雲にまくタイプの資料に出てくる奴だ。  
 
 ---
 
