--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -231,6 +231,18 @@ Wikiの説明がいちいち面白い。
 まぁ、簿記会計っていうくらいだしなぁ。
 念のためそこの関連性も調べるけど。
 
+簿記は会計の一部。  
+簿記は「お金の出入りを記録すること」「会計活動を記録する学問」
+会計は「お金に関する計算、記録、報告」「簿記で記録したものによって企業がも買っているのか、財務状況はどうなのかを記録、報告する手続き」
+簿記で記録された内容を基に色々考えるのが会計らしい。
+
+まぁ、表裏一体なのはよくわかった。
+でも、記録だけの話なら、これは違う。
+
 ---
 
 ## 雑記
+
+[.NET Framework のバージョン対応表](https://qiita.com/nskydiving/items/3af8bab5a0a63ccb9893)  
+公式を見るよりよっぽどいい。  
+とりあえず、.NetFramework 4.8ではC#7.3だ。  
