--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -182,6 +182,36 @@ https://ejje.weblio.jp/content/proprietary
 newして代入したら、参照先をバインドするのはいいとして、宣言した変数ってメモリ上のどこに配置されるの？
 ただ宣言しただけの状態ってメモリ上ではどういう状態になっているの？
 
+スキャフォールド(scaffold)とは
+https://awesome-linus.com/2019/05/17/what-is-scaffold/
+
+
+[XAML の高度な機能（WPF）](https://ufcpp.net/study/dotnet/wpf_xamladv.html?sec=style#style)  
+[テンプレート（WPF）](https://ufcpp.net/study/dotnet/wpf_template.html)  
+[WPF4.5入門 その47 「コンテンツモデル」](https://blog.okazuki.jp/entry/2014/08/25/164331)  
+[WPF4.5入門 その52 「コントロールテンプレート」](https://blog.okazuki.jp/entry/2014/09/07/195335)  
+
+wpf contentcontrol
+DataTemplate
+面積 たん
+坪
+平米
+
+
+git revert
+[いまさらのrevert](https://qiita.com/chihiro/items/2fa827d0eac98109e7ee)
+
+とりあえず、git pushするまでの基本的な構文をまとめる。  
+
+[フロントエンド開発の３ステップ（npmことはじめ）](https://qiita.com/hashrock/items/15f4a4961183cfbb2658)  
+
+
+configuration : 構成  
+
+[base64ってなんぞ？？理解のために実装してみた](https://qiita.com/PlanetMeron/items/2905e2d0aa7fe46a36d4)  
+https://wa3.i-3-i.info/word11338.html
+
+
 ---
 
 ## 現在進行形
