ペイロード、Configuration、プロプライエタリ、JP1、色々整理

--- a/BookKeeping/用語など.md
+++ b/BookKeeping/用語など.md
@@ -187,49 +187,43 @@ ECOの収入原簿印刷のアレ。
 従食は「有料」  
 まかないは「無料」  
 
+---
+
 ## レベニューマネジメント
 
 [レベニューマネジメントとは？概要や実施手順、活用事例を紹介](https://www.onemarketing.jp/knowledge/word/revenue-management)  
 
 顧客の需要に応じて商品やサービスの料金を変動させるマネジメント手法。  
-ホテル業界や航空業界など、在庫を繰越せない産業で活用される。  
+「全ての商品を売り切ることが収益の最大化につながる」という考え方に基づき、余りそうな部分を割安の料金設定で売り切る。  
+商品の売り切りが最重要事項。  
 
-コスト占める固定費の比率が高く、利用する顧客数との関連も薄いケースがほとんど。  
+ホテル業界や航空業界など、在庫を繰越せない産業で活用される。  
 商品やサービスが売れ残ると全損となるため、少しでも多く売り切るために採用されている。  
 
-### レベニューマネジメントにおける考え方
+### オーバーブック
 
-レベニューマネジメントは「全ての商品を売り切ることが収益の最大化につながる」という考え方を基礎としている。  
-正規の料金で商品を購入する顧客のために在庫を確保し、余りそうな部分を割安の料金設定で売り切る手法。  
+提供できる商品の数以上に、予約を受け付けること。  
+レベニューマネジメントにおける弊害の1つ。  
 
-レベニューマネジメントの正当性は、理論的には需要曲線で説明できます。  
-需要曲線では、需要と供給が釣りあう場所で価格が決まりますが、価格弾力性が高い業界では、同じ商品でも時期によって需要の高さが異なります。  
-そこで、それぞれのタイミングごとに適切な料金を設定し、すべての商品を売り切る工夫をします。  
+---
 
-### 手順
+## ファイナンス？会計？簿記？
 
-需要を予測する
-販売方法を決める
-効果を検証する
+ファイナンスは会社が事業のために資金を調達・運用すること。  
+目的は企業価値を向上させること。  
 
-需要を予測する
-需要の大きさに応じて、価格を変動させるレベニューマネジメントでは、いかに正確に需要を予測するかが成否のカギとなります。需要を予測するポイントは、予想される顧客をパターン別に分類することです。
+ファイナンスは財務。アカウンティングは会計。  
+ファイナンスは未来の現金を扱う。将来の収益を生み出すための資金調達や投資等を行う。  
+アカウンティングは過去の確定した利益を扱う分野。損益計算書や貸借対照表の作成を行う。  
 
-例えば、ホテルを例に考えてみましょう。家族で旅行をする場合、複数のホテルを比較して選ぶ余裕があるため、施設の条件が同じなら、料金が安いホテルを選びます。一方、出張中のビジネスマンは、宿泊場所の確保が最優先事項であるため、高めの料金設定でも予約する可能性があります。このように、顧客をパターン別に分類して需要を予測した上で、適切に商品を割り振ることが重要です。
+アカウンティングが会計分野で貸借対照表を扱うなら、それはもう簿記では？  
+簿記 = 会計?  
+まぁ、簿記会計っていうくらいだしなぁ。  
+念のためそこの関連性も調べるけど。  
 
-販売方法を決める
-次に、予測した需要に基づいて、利益を最大化できる販売方法を検討します。先述の例では、早期に予約するファミリー層などの顧客には、割引料金で部屋を提供します。これは、早めに予約を受け付けて、利益を確定するのが安定的な経営につながるためです。
+簿記は会計の一部。  
+簿記は「お金の出入りを記録すること」「会計活動を記録する学問」  
+会計は「お金に関する計算、記録、報告」「簿記で記録したものによって企業が儲かっているのか、財務状況はどうなのかを記録、報告する手続き」  
+簿記で記録された内容を基に色々考えるのが会計らしい。  
 
-しかし、すべての部屋を早期割引料金で埋めると、直前に高い料金でチェックインする顧客からの利益を逃してしまいます。そこで、早期割引枠に割り当てる部屋と、直前の予約枠に割り当てる部屋の数を、予測した需要に応じて決定する必要があります。
-
-効果を検証する
-レベニューマネジメントでは、選択した販売方法の効果を検証するのも、重要なポイントです。予測に基づいて設定した収益目標と、実際の収益を比較し、どの程度の差が生じているのかを確認しましょう。実際の収益が目標に到達しなかった場合は、その理由を見極めて、問題点を改善する必要があります。設定料金や顧客のパターン別に、確保した商品の数を検証し、常にPDCAサイクルを回しながら、レベニューマネジメントを実践してください。
-
-レベニューマネジメントを行う際の注意点
-ここでは、レベニューマネジメントにおいて、顕在化しやすい2つの注意点について解説します。
-
-販売価格の不平等
-レベニューマネジメントにおいては、顧客が予約するタイミングに応じて、商品の金額を変更します。商品の需要が大きくなるほど料金は高くなるため、繁忙期などに料金が跳ね上がるのは、やむを得ないといえるでしょう。しかし、同じ商品であるにもかかわらず、料金が異なる事実を顧客が知った場合、気分を害する可能性もあります。レベニューマネジメントでは、販売価格の極端な不平等によって、顧客が感情を害さないように気を付けなければなりません。
-
-オーバーブック
-提供できる商品の数以上に、予約を受け付けることを「オーバーブック」といいます。商品の売り切りが最重要事項であるレベニューマネジメントでは、一定のキャンセルが出ることを見越して、オーバーブックを行うのも必要な戦略です。ただし、オーバーブックが多すぎて当日に断る事態になると、顧客からの信頼を損なうリスクがあります。また、代わりの商品を用意したり、送迎したりするリカバリーには、コストもかかるでしょう。しかし、オーバーブックなしで商品を売り切るのは難しいため、需要の大きさを精密に予測する必要があります。
+まぁ、似たようなことであるのはわかった。  
