--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -213,45 +213,79 @@ Wikiの説明がいちいち面白い。
 
 ---
 
-## ファイナンス
+## ペイロード(Payload)
 
-会社が事業のために資金を調達・運用すること。
-目的は企業価値を向上させること。  
+レスポンスのデータ部分をペイロードとはよく言うが、つまり何？という事を知らなかったのでまとめ。  
+簡単に言えば、データ本体そのものを指す言葉だった。  
 
-ファイナンスは財務。アカウンティングは会計。  
+以下説明。  
+[ペイロード 【payload】](https://e-words.jp/w/%E3%83%9A%E3%82%A4%E3%83%AD%E3%83%BC%E3%83%89.html)  
 
-アカウンティングは過去の確定した利益を扱う分野。  
-損益計算書や貸借対照表の作成を行う。  
+``` txt
+有料荷重、有効搭載量、積載物等の意味を持つ英単語。  
+通信・ネットワークの分野に置いては、送受信されるデータに伝送単位(パケットやデータグラムなど)のうち、  
+宛先などの制御情報を除いた、相手に送り届けようとしている正味のデータ本体のことをペイロードという。  
 
-ファイナンスは未来の現金を扱う。  
-将来の収益を生み出すための資金調達や投資等を行う。  
+パケットやデータグラムの多くは、先頭部分に制御情報を記したヘッダ部。
+続けてペイロード(ボディ)。  
+必要に応じて末尾にパディング(特定の長さに合わせるための「詰め物」となる無意味なデータ)という構成になっている。  
+```
 
-アカウンティングが会計分野で貸借対照表を扱うなら、それはもう簿記では？
-簿記 = 会計?
-まぁ、簿記会計っていうくらいだしなぁ。
-念のためそこの関連性も調べるけど。
+---
 
-簿記は会計の一部。  
-簿記は「お金の出入りを記録すること」「会計活動を記録する学問」
-会計は「お金に関する計算、記録、報告」「簿記で記録したものによって企業がも買っているのか、財務状況はどうなのかを記録、報告する手続き」
-簿記で記録された内容を基に色々考えるのが会計らしい。
+## JP1
 
-まぁ、表裏一体なのはよくわかった。
-でも、記録だけの話なら、これは違う。
+Twitterでこの単語を見て、この単語を見ても一般の人は～みたいな感じで書いてあったので調べた。  
+
+調べたらあった。
+
+``` txt : <https://twitter.com/haijin88/status/1461655607191113734>
+IT業界の人に「JP1」って言ったら通じなかった。なんでや！と思ったが、web系の人はそりゃ知らんよな
+```
+
+``` txt : wiki
+JP1は日立製作所が開発・発売している日立オープンミドルウェアシリーズのひとつで、1994年に発売されたソフトウェア。
+統合システム運用管理ツールと位置付けられ、運用ツールとしての日本国内シェアは約27%でトップクラスである。
+```
+
+``` txt : e-Words
+JP1とは、日立製作所が開発・販売している、企業のITシステムの運用管理ソフト。
+IT資産の管理や稼動状況の把握、定型業務の自動化、セキュリティ対策などを統合的に行うことができる。
+1台から数千台まで様々な規模のシステムに導入することができ、必要に応じて拡張していくことができる。
+「オートメーション」「モニタリング」「コンプライアンス」の3分野で様々なソフトウェア製品やサービスを提供しており、
+これらの中から必要なものを組み合わせてシステムを構成する。
+```
+
+うーん。よくわからないけど、企業における資源の管理や自動化などを行ってくれるすごいソフトって事かな。  
+とても巨大なソフトなのだろう。  
+いったいどれだけの事ができるのか全く想像出来ないけど、とりあえずそういうものがあるんだなー程度でいいか。  
+
+調べてみたら、これ専用の資格試験まであるらしい。すごいね。  
+
+---
+
+## プロプライエタリ
+
+JP1の契約形態がプロプライエタリって書いてあったのでついでに調べた。  
+
+``` txt : 調べたら一番上に出てくる奴。
+プロプライエタリ（proprietary）は「専用の」「独自の」「独占的な」「所有権・占有権のある」「非公開の」の意味で、コンピュータ関連用語としてはオープン（open）の対義語となる。 
+```
+
+``` txt
+「独占的な」という意味の形容詞。ソースコード、仕様、規格、構造などが公開されていない状態を指す。
+特定の企業や団体が権利を保有し、その具体的詳細を公開していないこと。
+プロプライエタリシステム、プロプライエタリソフトウェアなど。「オープン」の反意語として使われる。
+関連する語として「クローズド」という語があるが、この語はソースコードが公開されていない状態のみを指すことが多い。
+オープンであることを至上とする教条主義的な文脈において、否定的な形容として使われることがあるが、この語自体に否定的な意味はない。
+```
+
+代表的なものとして、もちろん「JP1」が上げられるが、WindowsやMacOSとかOSも含まれる見たい。  
+後は、「弥生会計」とか「OracleDatabase」とかもかな。  
+「MAYA」とかのCGソフトもあるか。  
+てか、これ関係は上げればキリがなくなる。  
+まぁ、使うのにお金払う奴は大体これって事だよね。  
 
 ---
 
 ## 雑記
-
-[.NET Framework のバージョン対応表](https://qiita.com/nskydiving/items/3af8bab5a0a63ccb9893)  
-公式を見るよりよっぽどいい。  
-とりあえず、.NetFramework 4.8ではC#7.3だ。  
-
-
-## ESlint
-
-JavaScript,TypeScriptなどの静的解析ツール。  
-
-## Babel.js
-
-次世代JavaScriptの標準機能をブラウザのサポートを待たずに使えるようにするNode.js製のツール。  
