102セキュリティ完了、Vuejs用語まとめ、その他細かい物

--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -13,7 +13,9 @@
 環境変数を定義する。  
 シェル変数を環境変数に、環境変数をシェル変数に変更する。  
 
-## systemctl  
+---
+
+## systemctlコマンド  
 
 システム起動時のサービス起動デーモンsystemdのコントロール用コマンド  
 
@@ -26,3 +28,78 @@
 デフォルトは0。  
 
 [プロセス優先度(NICE値)を変更する方法](https://qiita.com/hana_shin/items/438dfe93a765ffa337ae)
+
+---
+
+## findコマンド
+
+ファイルやディレクトリを検索するコマンド  
+
+``` txt
+find [ディレクトリ] [検索式]
+ディレクトリを省略した場合、カレントディレクトリ以下が対象となる。
+
+検索式
+-name → ワイルドカードを使用してファイルやディレクトリの一部のみ指定した検索ができる
+-atime → 最終アクセス時刻で検索
+-mtime → 最終更新時刻で検索
+-perm → アクセス権で検索
+-size → ファイルサイズ(ブロック単位)で検索
+-type → ファイルの種類で検索。 d:ディレクトリ l:シンボリックリンク f:ファイル
+-user ユーザー名 : ファイルの所有者で検索
+-uid → ユーザーIDで作成したファイルを検索
+-print → マッチしたファイルの表示(省略可能)
+-print0 → 検索結果をnull文字で区切る
+-exec コマンド || \; → マッチしたファイルに対してコマンドを実行する
+-ok コマンド || \; → マッチしたファイルに対してコマンドを実行する(確認あり)
+-mindepth → 指定した階層より下を検索
+-maxdepth → 指定した階層まで検索
+```
+
+/homeディレクトリ以下から、ファイル名の末尾が「.rpm」のファイルを検索する。  
+`find /home -name "*.rmp"`  
+
+/dataディレクトリ以下から過去1日以内に更新されたファイルを検索する。  
+`find /data -type f -mtime -1`  
+
+/usr/binディレクトリ以下からSUIDが設定されたファイルを検索する。  
+`find /usr/bin -type f -perm -u+s`  
+
+/tmpディレクトリ以下から所有者がstudentであるファイルやディレクトリを検索する。  
+`find /tmp -user student`  
+
+カレントディレクトリ以下から30日を超える日数の間アクセスされていないファイルを検索し、削除する。  
+`find -atime +30 -exec rm {} \`  
+
+現在のディレクトリ以下にあるシンボリックリンクファイルを探す  
+`find -type l`  
+
+/binディレクトリ内で、一般ユーザーが実行してもroot権限で実行されるファイルを検索する。  
+`find /bin -uid 0 -perm /4000`  
+uid 0はrootユーザーを表す。0は固定値。  
+`/4000`の構文はSUID,SGIDのいずれか片方でも設定されているファイルを検索する場合の構文な模様。  
+
+[【Linux】 findコマンドとパーミッション](https://www.ricecake24book.com/linux-find-perm/)  
+
+SUIDとSGIDが両方設定されているファイルを検索する  
+`find /usr -perm -6000`  
+
+SUIDとSGIDのいずれか片方でも設定されているファイルを検索する。  
+`find /usr -perm /6000`  
+
+`+`の場合も`/`と同じ動作ではあるが、指定の仕方が古く警告が表示されるらしい。`/`を使って検索すべしとのこと。  
+`find /usr -perm +6000`  
+
+``` txt : <https://atmarkit.itmedia.co.jp/ait/articles/1809/13/news037.html>  
+実行時の権限を指定するSUID（Set User ID）とSGID（Set Goup ID）というパーミッションがLinuxには用意されています。  
+SUIDが設定されているファイルを探したい場合は「u」を付けて「-perm -u+s」と指定するか、パーミッションに「4000」を足して「-perm -4000」のように指定します。  
+同様に、SGIDが設定されているファイルを探したい場合は「g」を付けて「-perm -g+s」とするか、「2000」を足して「-perm -2000」のように指定します。  
+```
+
+---
+
+## touchコマンド
+
+ファイルのタイムスタンプを変更するコマンド。  
+存在しないファイル名を指定することで、内容の入っていないファイルを新規作成する機能も持っている。  
+なので、本来の使い方はされず、もっぱらファイルを作るコマンドと化している。  
