--- a/Programming/プログラミング言語開発者.md
+++ b/Programming/プログラミング言語開発者.md
@@ -2,94 +2,94 @@
 
 <https://next.rikunabi.com/tech/docs/ct_s03600.jsp?p=002125>  
 
-- C言語 : デニス・リッチー　[Dennis MacAlistair Ritchie]  
+- C言語 : デニス・リッチー [Dennis MacAlistair Ritchie]  
 
 実のところ、すべてを備えていない言語のほうがプログラミングは簡単である。  
 
-- C++ : ビャーネ・ストロヴストルップ　[Bjarne Stroustrup]  
+- C++ : ビャーネ・ストロヴストルップ [Bjarne Stroustrup]  
 
 プログラミング言語は世界のほんのちっぽけな一部分にすぎない。その程度のものだから、あまり真剣に取り過ぎるべきではない。  
 バランス感覚を保つべきで、最も重要なことはユーモアのセンスを保つということである。C++はしゃれとジョークに富んでいる。  
 
-- C# : アンダース・ヘルスバーグ　[Anders Hejlsberg]  
+- C#,TypeScript : アンダース・ヘルスバーグ [Anders Hejlsberg]  
 
 これまでいろいろなプログラミング言語を見てきましたが、芸術性の面ではよいが、科学の面ではよくないといったパターンや、またその逆のパターンもある。  
 この2つをうまく両立させなければならないところに、言語設計者としての妙技があるのだと思う。  
 
-- Java : ジェームズ・ゴスリン　[James Arthur Gosling]  
+- Java : ジェームズ・ゴスリン [James Arthur Gosling]  
 
 シンプルであれ。  
 
-- PHP : ラスマス・ラードフ　[Rasmus Lerdorf]  
+- PHP : ラスマス・ラードフ [Rasmus Lerdorf]  
 
 今のPHPを開発したのは私ではなく、百人単位の開発者たちです。  
 私は単に1人目の開発者だっただけです。  
 
-- JavaScript : ブレンダン・アイク　[Brendan Eich]  
+- JavaScript : ブレンダン・アイク [Brendan Eich]  
 
 私は年を取るにつれて疑い深くなり、うまくもなりましたが、それでも楽観的になっている場合があります。  
 頭の中でピノキオに出てくるコオロギのように囁くのです。「何かを見落としていてバグをつくっているぞ」。  
 
-- Python : グイド・ヴァンロッサム　[Guido van Rossum]  
+- Python : グイド・ヴァンロッサム [Guido van Rossum]  
 
 困難のために会社を辞めたことはあっても、プロジェクトを止めたことはない。  
 いつもPythonのプロジェクトは次の会社で続けていた。  
 
-- Ruby : まつもとゆきひろ　[Yukihiro Matsumoto]  
+- Ruby : まつもとゆきひろ [Yukihiro Matsumoto]  
 
 これは私の個人的ポリシーなんですけど、いつもフェアでありたいんです。  
 Rubyより優れた言語はたくさんあって、それは素直に認めたいと思っています。私はRubyの作者なので、Rubyが好きなのは確かだけれど、だからといって、アンフェアになるのは嫌だなあといつも思っています。  
 
-- Visual Basic : アラン・クーパー　[Alan Cooper]  
+- Visual Basic : アラン・クーパー [Alan Cooper]  
 
 ソフト製品の製作者が自分たちの手をかけた製品を見るときには、悪いところは目に入らない。機能や特徴がいかに豊富かは見える。  
 それがとんでもなく使いにくいとか、使い方を覚えるのにうんざりするほど時間がかかるとか、あるいはそれを毎日の暮らしの中で使わなくてはならない人々を、軽んじてバカにするものだということについては、無視してしまうのだ。  
 
-- Haskell : サイモン・ペイトン・ジョーンズ　[Simon Peyton Jones]  
+- Haskell : サイモン・ペイトン・ジョーンズ [Simon Peyton Jones]  
 
 私は自分のプログラムをできるだけ美しいものにしようとはしますが、必ずしも一般的にしようとはしません。  
 私はプログラムを、手にしているタスクを実行できる、可能な限り明快でわかりやすいものにしようと努めます。  
 
-- Perl : ラリー・ウォール　[Larry Wall]  
+- Perl : ラリー・ウォール [Larry Wall]  
 
 プログラミングとはシンフォニー（交響曲）を作曲するようなものだと思っています。プログラミングとは、同時に、さまざまなレベルで、物事が動かなくてはならないからです。  
 
-- FORTRAN : ジョン・バッカス　[John Warner Backus]  
+- FORTRAN : ジョン・バッカス [John Warner Backus]  
 
 プログラムを書くのが好きじゃなかったから、プログラムを簡単に書けるシステムを考えたのです。  
 
-- COBOL : グレース・ホッパー　Grace Murray Hopper  
+- COBOL : グレース・ホッパー Grace Murray Hopper  
 
 もしそれがよい考えなら、思い切ってそれをしなさい。  
 許可をもらうよりも、謝るほうが簡単だから。  
 
-- Lisp : ジョン・マッカーシー　[John McCarthy]  
+- Lisp : ジョン・マッカーシー [John McCarthy]  
 
 自分で利用できる限られたコンピューティング環境の中でチューリング・マシンが欲しかったから、Lispを開発したのです。  
 
-- Pascal : ニクラウス・ヴィルト　[Niklaus Wirth]  
+- Pascal : ニクラウス・ヴィルト [Niklaus Wirth]  
 
 ソフトウェアはハードウェアが高速化するより急速に低速化する。  
 
-- Smalltalk : アラン・ケイ　[Alan Kay]  
+- Smalltalk : アラン・ケイ [Alan Kay]  
 
 不完全なアイデアに基づいた貧弱な実装による出来の悪いデファクトスタンダードによって、素朴な顧客から大量の金を巻き上げている連中に惑わされないように。  
 
-- AWK : ブライアン・カーニハン　[Brian Wilson Kernighan]  
+- AWK : ブライアン・カーニハン [Brian Wilson Kernighan]  
 
 そもそも、デバッギングはコーディングよりも2倍難しい。  
 従って、あなたが可能な限り賢くコードを書くとしたら、定義からして、あなたはそれをデバッグできるほど賢くない。  
 
-- PostScript : ジョン・ワーノック　[John Warnock]  
+- PostScript : ジョン・ワーノック [John Warnock]  
 
 人が知らないことを自分は知っていると思ってはいけない。いつだってもっと頭の切れる人がいるものだ。  
 ひょっこりと現れて、自分よりいいアルゴリズムを考え出したり、もっと簡単に仕事をする方法を思いついたりするんだ。  
 
-- Lua : ロベルト・イエルサリムスキー　[Roberto Ierusalimschy]  
+- Lua : ロベルト・イエルサリムスキー [Roberto Ierusalimschy]  
 
 プログラミング言語をクルマに例えたら、Luaはキュートで、効率がよくて、とってもトレンディなクルマになるよ。  
 
-- Erlang : ジョー・アームストロング　[Joe Armstrong]  
+- Erlang : ジョー・アームストロング [Joe Armstrong]  
 
 「ジョーのデバッグの法則」というのがあります。  
 それは、すべてのバグは最後にプログラムを修正した個所からプラスマイナス3ステートメント以内にある、というものです。  
