--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -114,3 +114,12 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 行けた。  
 ただ、受付のお兄ちゃんが裏に確認に行ったので、程度の確認はしてもらったほうがいいのかもしれない。  
 というわけで、再利用の場合は郵便局の窓口がマストかな。  
+
+### らくらくメルカリ便のネコポスでダイソーのA4封筒を使う
+
+[らくらくメルカリ便 ダイソーA4](https://qa.mamari.jp/question/12497651)  
+
+ダイソーのA4封筒のサイズとらくらくメルカリ便の表記サイズに違いがあった。  
+そのままのサイズでは、オーバーしてしまうので、端を折りたたんでそのサイズに収める必要がある模様。  
+前に購入しておいたネコポスの封筒があったので、そのサイズに収まるようにしてガムテープ等で固定した。  
+微妙な箇所がわからなかったので、備忘録として残しておく。  
