--- a/Vue.js/用語.md
+++ b/Vue.js/用語.md
@@ -63,12 +63,55 @@ JSなどの様々なプログラミング言語やスクリプトから扱いた
 あるプログラミング言語で書かれたソースコードなどについて、処理内容を保ったまま、別のプログラミング言語（または同じ言語の別バージョン）に変換すること。  
 主にツールによる自動変換・半自動変換を指す。  
 
-## ESlint
+## スキャフォールド
 
-JavaScript,TypeScriptなどの静的解析ツール。  
+vue.jsに限らずアプリケーションを効率的に構築するためにある程度まで必要な状態を作ってくれることを英語ではscaffoldingという単語を利用します。
+日本語では足場や骨組みという意味があり、scaffoldingによってアプリケーションの足場がつくられているので最低限の機能(足場)の上にオリジナルの機能を実装していくことになります。
+
+## node_modulesフォルダ
+
+node_modulesはnpmでインストールされるパッケージの保管フォルダ  
+
+## デコレーター
+
+---
+
+## ESLint
+
+<https://qiita.com/mysticatea/items/f523dab04a25f617c87d>  
+<https://qiita.com/mzmz__02/items/63f2624e00c02be2f942>  
+
+JavaScriptのための静的解析ツール。  
+TypeScriptでも有効。  
+※TypeScriptはTSListがあったが、ESLintに統一が決まった。
+
+- コードを実行する前の明らかなバグを検出してくれる。  
+- 括弧やスペースの使い方などのスタイルを統一してくれる。  
+  複数人で開発する場合でもシステム全体のコードの一貫性を維持することができる。  
+
 
 ## Babel.js
 
+<https://qiita.com/Shagamii/items/a87181c22ea777ee2acc>  
+<https://qiita.com/mzmz__02/items/e6fbe5e30cc3fd13788f>  
+JavaScriptのコードを新しい書き方から古い書き方へと変換するツール。  
 次世代JavaScriptの標準機能をブラウザのサポートを待たずに使えるようにするNode.js製のツール。  
+
 Babelが最新のJavaScriptを古いブラウザでも動かせるようにトランスパイルしてくれるなら、TypeScriptとの兼ね合いはどうなるのか？  
-TypeScriptもJavaScriptをラップした言語であり、コンパイル時にはある程度古いブラウザでも動かせるようにJavaScriptに変換してくれるはずだが。  
+TypeScriptもJavaScriptをラップした言語[AltJSというらしい]であり、コンパイル時にはある程度古いブラウザでも動かせるようにJavaScriptに変換してくれるはずだが。  
+
+## axios
+
+axiosはPromiseベースのHTTP Clientライブラリ。  
+GETやPOSTのHTTPリクエストを使ってサーバからデータの取得、データへのデータ送信を行うことができます。  
+読み方はアクシオス。  
+<https://qiita.com/ksh-fthr/items/2daaaf3a15c4c11956e9>  
+<https://reffect.co.jp/vue/vue-axios-learn#axios-2>
+
+## bootstrapvue
+
+`b-○○`タグの提供元。  
+
+## bootstrap
+
+## webpack
