ユーザーインターフェース少し

--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -361,8 +361,9 @@ route add [パラメータ]
 ルーティングテーブルから経路情報を削除する書式
 route del [パラメータ]
 
--F : カーネルのルーティングテーブルを表示する
--C : カーネルのルーティングキャッシュを表示する
+-F : カーネルのルーティングテーブルを表示する。
+-C : カーネルのルーティングキャッシュを表示する。
+-p : add時に指定すると、次回以降のOS起動後も有効になる。
 ```
 
 ルーティングテーブルの項目にも色々あるが、だるいので都度  
