--- a/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
+++ b/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
@@ -7,9 +7,19 @@
 
 ## X11のインストールと設定
 
-X Window System (X,X11)  
-XFree86
-X.Org
+### X Window System(X,X11)
+
+LinuxでGUIを実現するための技術。  
+X.Org.Foundationが開発。  
+クライアント/サーバー方式を採用。  
+Xサーバー
+Xクライアント
+
+XFree86  
+一昔前のX Window Systemの実装。  
+
+X.Org  
+現在のX Window Systemの実装。  
 
 /etc/X11/xorg.confファイル
 /etc/X11/xorg.conf.dディレクトリ
@@ -19,13 +29,21 @@ X.Org
 ## ディスプレイマネージャーの設定
 
 ### ディスプレイマネージャー  
+
 GUIでログイン画面を表示し、ユーザー認証を行うソフトウェア  
+XDM : xorgX11で開発された標準のディスプレイマネージャー  
+GDM : GNOMEの標準ディスプレイマネージャー  
+KDM : KDEの標準ディスプレイマネージャー  
+SDDM(Simple Desktop Display Manager) : kdmの後継。KDE Plasmaの標準ディスプレイマネージャー  
+LightDM : Ubuntuの標準ディスプレイマネージャー  
 
 ### ウィンドウマネージャー
+
 Xの外観を制御しているソフトウェア  
 ウィンドウの外観、メニュー、アイコンなどを提供するXクライアント。  
 
-###  統合デスクトップ環境  
+### 統合デスクトップ環境  
+
 ウィンドウマネージャも含め、アプリケーションまで揃えて統一的な操作を提供したデスクトップ環境。  
 代表例 : GNOME,KDE Plasma  
 
@@ -36,6 +54,7 @@ Xfce,LXDE,MATE
 XfceはいつぞやWSLで採用したやつだし、MATEは職場の開発環境のアレだ。  
 
 ### KED(KDE Software Compilation)
+
 デスクトップ環境KDE Plasma、ライブラリ、アプリケーションから構成される大規模なソフトウェア群。  
 Qt(キュート)というGUIツールきっとをベースとして開発された。  
 ディスプレイマネージャー : SDDM  
@@ -47,37 +66,85 @@ GNOME : RHEL,CentOS,Fedora,Ubuntuで標準採用
 ウィンドウマネージャー : Mutter  
 
 ### VNC(Virtual Network Computing)
+
 Windows,Linux,MaxOSなどクロスプラットフォーム対応のリモードデスクトップソフトウェア。  
 デスクトップを提供する側でVNCサーバーを稼働させる。  
 
-稼働コマンド : `vncserver :1`  
-終了コマンド : `vncserver -kill :1`  
+VNCサーバー起動コマンド。「:1」はディスプレイ番号  
+`vncserver :1`  
+
+終了コマンド  
+`vncserver -kill :1`  
+
+### RDP(Remote Desktop Protocol)
+
+Windows標準のリモートデスクトッププロトコル。  
+WindowsのデスクトップをLinuxデスクトップに表示したい場合に利用する。  
+言わずもがな。  
+
+### SPICE(Simple Protocol for Independent Computing Environment)
+
+RDPと同様の画面転送プロトコル。  
+オープンソースで開発されている。  
+VNCと異なり、通信の暗号化やマルチモニタなど、多数の機能に対応している。  
+
+### XDMCP(X Display Manager Control Protocol)
+
+ディスプレイマネージャーをネットワーク越しに利用できるプロトコル。  
+Xサーバーとディスプレイマネージャーの間で使われる。  
+通信路が暗号化されないため、SSHを介して利用する必要がある。  
 
 ---
 
 ## アクセシビリティ
 
+### スティッキーキー(固定キー)
+
+### スローキー
+
+### バウンスキー
+
+### トグルキー
+
+### マウスキー
+
 ---
 
 ## 小豆本問題
 
-8.1  
+### 8.1  
+
 XサーバとしてX.Orgを利用しています。中心となる設定ファイル名を記述してください。  
 
-8.2  
+---
+
+### 8.2  
+
 X.Orgの設定ファイルで、キーボードやマウスなどの入力装置に関する設定を行うセクションを選択してください。  
 
-8.3  
+---
+
+### 8.3  
+
 ホストremotepcのXクライアントが、ホストlocalpcのXサーバーを利用できるように設定しようとしています。  
 ホストlocalpc上で利用の許可を設定するには、どのコマンドを使えばよいかを選択してください。  
 
-8.4
+---
+
+### 8.4
+
 ディスプレイマネージャをすべて選択してください。  
 
-8.5
+---
+
+### 8.5
+
 ネットワーク経由でリモートホストのXクライアントがローカルホストのXサーバーを利用したい場合、リモート干す値で設定すべき環境変数を記述してください。
 
-8.6
+---
+
+### 8.6
+
 WindowsのデスクトップをLinux端末からネットワーク越しに操作しようとしています。
 Windows標準のリモートデスクトップ機能で採用されているプロトコルを選択してください。  
 
@@ -86,6 +153,9 @@ RemoteDesktopProtocol
 合ってた。
 この問題はやる前から大丈夫そうだな。
 
-8.7
+---
+
+### 8.7
+
 Shiftキーと他のキーを同時に押すことが出来ないユーザーのために提供されている、Shiftキーを一度押すと、  
 他のキーを押すまでShiftキーがアクティブな状態のままになる昨日のことを何と呼びますか？  
