インターフェース完了、雑学整理

--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -13,6 +13,33 @@
 環境変数を定義する。  
 シェル変数を環境変数に、環境変数をシェル変数に変更する。  
 
+``` txt
+export [オプション] [変数名[=値]…]
+
+オプション
+-f → シェル変数を参照する
+-n → 指定した環境変数をシェル変数に変える
+-p → 全てのエクスポートされた変数と関数を全て一覧表示する。
+```
+
+シェル変数DISPLAYを定義  
+`DISPLAY=localpc:0`  
+
+シェル変数DISPLAYを環境変数に設定  
+`export DISPLAY`  
+
+シェル変数定義と同時に環境変数に設定  
+`export DISPLAY=localpc:0`  
+
+環境変数DISPALYを削除  
+`export -n DISPLAY`  
+
+---
+
+## printenvコマンド
+
+現在設定されている環境変数を確認するコマンド  
+
 ---
 
 ## systemctlコマンド  
