--- a/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
+++ b/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
@@ -12,17 +12,125 @@
 LinuxでGUIを実現するための技術。  
 X.Org.Foundationが開発。  
 クライアント/サーバー方式を採用。  
-Xサーバー
-Xクライアント
 
 XFree86  
 一昔前のX Window Systemの実装。  
 
 X.Org  
 現在のX Window Systemの実装。  
+「UnixLikeSystem上でのGUI基礎環境の提供」をしてくれるプログラム。  
 
-/etc/X11/xorg.confファイル
-/etc/X11/xorg.conf.dディレクトリ
+### クライアント・サーバーモデル
+
+普通のクラサバはクライアントを直接操作して離れた場所にあるサーバーを利用するが、Xでは逆となる。  
+
+``` txt
+Xクライアント
+↑②    ↓③
+Xサーバー
+↑①    ↓④
+ｷｰﾎﾞｰﾄﾞ ﾓﾆﾀｰ
+
+ネットワーク越しの利用の場合、②と③がネットワークになる。
+```
+
+①キーボードでデータを入力する。  
+②Xサーバーは入力データを受け付けてXクライアント(アプリ)にデータを送る。  
+③Xクライアントは受け取ったデータを処理して処理結果をXサーバーへ送る。  
+④XサーバーはXクライアントから受け取った処理結果をディスプレイに出力する。  
+
+X Window Systemはネットワーク側のウィンドウシステム。  
+XクライアントはTCP/IP上でXプロトコルによりXサーバーのサービスを受ける事ができる。  
+
+Xクライアント側の設定:  
+環境変数DISPLAYで送り先のXサーバーを指定する。  
+
+Xサーバー側の設定:  
+xhostコマンドを実行してクライアントホストからのリクエストを許可する。  
+
+### X.Orgの設定
+
+**/etc/X11/xorg.confファイル**  
+**/etc/X11/xorg.conf.dディレクトリ**  
+設定ファイルの他にディレクトリ以下に.confファイルを配置する場合もある。  
+
+xorg.confファイルは複数のセクションから構成されている。  
+
+``` txt : xorg.confの主なセクション
+Files : フォントやカラーデータベースファイルのパス名
+Module : ダイナミックモジュールの設定
+InputDevice : キーボードやマウス等の入力装置の設定
+InputClass : 入力装置の「クラス」に適用される設定
+Device : ビデオカードの設定
+Monitor : モニターの設定
+Modes : ビデオモードの設定
+Screen : ディスプレイの色深度(表示色数)や画面サイズの設定
+ServerLayout : 入出力デバイスとスクリーンの指定
+```
+
+Xサーバーの色深度を表示するコマンド  
+`xdpyinfo` or `xwininfo`  
+
+xorg.confファイルを自動生成するためのコマンド  
+`Xorg - configure`  
+
+上記コマンドで`/root/xorg.conf.new`ファイルが生成される。  
+
+`/root/xorg.conf.new`ファイルを使ってテストを実行するコマンド  
+`X -config /root/xorg.conf.new`  
+
+上記ファイルをコピーする。  
+`cp /root/xorg.conf.net /etc/X11/xorg.conf`  
+
+Xのログファイル  
+`/var/log/Xorg.0.log`  
+or  
+`~/.xsession-errors`  
+
+Xサーバーの起動コマンド  
+`startx`
+
+### xhostコマンド
+
+Xサーバーへのリモートアクセスを許可するコマンド  
+
+``` txt
+xhost [+ or -] [ホスト名]
+
+オプション
++ ホスト名 → 指定したホストからのXサーバーへの接続を許可
+- ホスト名 → 指定したホストからのXサ―バーへの接続を拒否
++ → アクセス制御の無効化(全てのホストからの接続を許可)
+- → アクセス制御の有効か(アクセス許可されていないホストからの接続は拒否)
+
+引数なしで実行すると、現在の状態を表示する。
+```
+
+remotepcのXクライアントが、localpcのXサーバーを利用できるように許可する設定  
+`xhost +remotepc`
+
+Xクライアントの処理結果を表示するために、remotepcの環境変数DISPLAYでXサーバーを指定して環境変数のDISPLAYをエクスポートを設定する。  
+`構文 : ホスト名 : ディスプレイ番号`  
+
+remotepcのXクライアントが、localpcのXサーバーを利用できるよう許可する設定  
+
+``` txt
+DISPLAY=localpc:0
+export DISPLAY
+```
+
+### Wayland
+
+X11に変わる新しいディスプレイサーバー。  
+クライアントとサーバ―はWaylandプロトコルで通信する。  
+Waylandディスプレイサーバーは個々のクライアントアプリケーションのウィンドウを合成してスクリーンイメージを生成する機能を持つ。  
+これがWaylandの主要機能であるコンポジタ(compositor)。  
+Xに比べて再描画がが早い。  
+ウィンドウのリサイズやオーバーラップ時のちらつき(flicker)がなく、処理が効率的で高速と言った特徴を持つ。  
+Xクライアントアプリケーションにも対応するため、WaylandサーバーはXorgサーバーにパッチを当てた形で提供される。  
+
+RHEL8,CentOS8でデフォルト実装されている。  
+Fedora28やUbuntu18.04では設定により使用可能。  
 
 ---
 
@@ -31,6 +139,10 @@ X.Org
 ### ディスプレイマネージャー  
 
 GUIでログイン画面を表示し、ユーザー認証を行うソフトウェア  
+ディスプレイマネージャーはユーザー認証が完了するとXサーバー(Xord)とXクライアントを起動する。  
+GNOMEの場合はgnome-session。  
+KDEの場合はstartkde。  
+
 XDM : xorgX11で開発された標準のディスプレイマネージャー  
 GDM : GNOMEの標準ディスプレイマネージャー  
 KDM : KDEの標準ディスプレイマネージャー  
@@ -42,14 +154,15 @@ LightDM : Ubuntuの標準ディスプレイマネージャー
 Xの外観を制御しているソフトウェア  
 ウィンドウの外観、メニュー、アイコンなどを提供するXクライアント。  
 
+Kwin,Mutter  
+
 ### 統合デスクトップ環境  
 
 ウィンドウマネージャも含め、アプリケーションまで揃えて統一的な操作を提供したデスクトップ環境。  
+それなりのCPUパワーや多くのメモリが必要。
 代表例 : GNOME,KDE Plasma  
 
-それなりのCPUパワーや多くのメモリが必要。
-軽快なデスクトップ環境例:
-Xfce,LXDE,MATE
+軽快なデスクトップ環境例 : Xfce,LXDE,MATE  
 
 XfceはいつぞやWSLで採用したやつだし、MATEは職場の開発環境のアレだ。  
 
@@ -68,6 +181,9 @@ GNOME : RHEL,CentOS,Fedora,Ubuntuで標準採用
 ### VNC(Virtual Network Computing)
 
 Windows,Linux,MaxOSなどクロスプラットフォーム対応のリモードデスクトップソフトウェア。  
+RFB(Remote Frame Buffer)プロトコルにより、リモートマシンのグラフィカルデスクトップをローカルマシンのデスクトップ内で共有する。  
+通信路にsshを使用する事でセキュリティを強化できる。  
+
 デスクトップを提供する側でVNCサーバーを稼働させる。  
 
 VNCサーバー起動コマンド。「:1」はディスプレイ番号  
@@ -75,6 +191,12 @@ VNCサーバー起動コマンド。「:1」はディスプレイ番号
 
 終了コマンド  
 `vncserver -kill :1`  
+
+VNCサーバーソフトウェア  
+tigervnc-server  
+
+VNCクライアントソフトウェア  
+vinagre  
 
 ### RDP(Remote Desktop Protocol)
 
@@ -88,25 +210,62 @@ RDPと同様の画面転送プロトコル。
 オープンソースで開発されている。  
 VNCと異なり、通信の暗号化やマルチモニタなど、多数の機能に対応している。  
 
+仮想マシンのコンソールをローカルホストの画面に表示するプロトコルでもあるらしい。  
+
 ### XDMCP(X Display Manager Control Protocol)
 
 ディスプレイマネージャーをネットワーク越しに利用できるプロトコル。  
 Xサーバーとディスプレイマネージャーの間で使われる。  
 通信路が暗号化されないため、SSHを介して利用する必要がある。  
 
+XDMCPを利用するXサーバー  
+Xephyr,Xnest  
+
 ---
 
 ## アクセシビリティ
 
+システムの利用を可能にする、あるいは容易にするための機能をアクセシビリティと呼ぶ。  
+
 ### スティッキーキー(固定キー)
+
+Shiftキーを一度押すと、他のキーを押すまでShiftキーがアクティブな状態のままになる機能。  
 
 ### スローキー
 
+キーを素早く操作できない場合、キー入力を認識するまでの時間を調整できる機能。  
+指定した時間より長く押し続けないとそのキーの入力を有効としない設定。  
+
 ### バウンスキー
+
+単一のキーを素早く何も押した場合にキー入力を無視する機能。  
 
 ### トグルキー
 
+インジケータ―ライトの代わりにビープ音を使う機能。  
+
 ### マウスキー
+
+テンキーでマウスの動きをエミュレートする機能。  
+
+### リピートキー
+
+キーを長押しすると繰り返しキー入力を行う設定。  
+
+### gok(GNOME Onscreen Keybord)
+
+GNOME2のオンスクリーンキーボード。  
+gokコマンドで表示できる。  
+
+### orca  
+
+スクリーンリーダーや拡大鏡を提供する。  
+GNOME2,3にて内臓されている。  
+
+### emacspeak  
+
+Emacs環境に統合化されたスクリーンリーダーのアプリケーション  
+Emacsに読みこんだテキストや電子メール等を音声で読み上げる事ができる。  
 
 ---
 
@@ -116,11 +275,17 @@ Xサーバーとディスプレイマネージャーの間で使われる。
 
 XサーバとしてX.Orgを利用しています。中心となる設定ファイル名を記述してください。  
 
+→  
+xorg.conf  
+
 ---
 
 ### 8.2  
 
 X.Orgの設定ファイルで、キーボードやマウスなどの入力装置に関する設定を行うセクションを選択してください。  
+
+→  
+InputDevice  
 
 ---
 
@@ -129,17 +294,29 @@ X.Orgの設定ファイルで、キーボードやマウスなどの入力装置
 ホストremotepcのXクライアントが、ホストlocalpcのXサーバーを利用できるように設定しようとしています。  
 ホストlocalpc上で利用の許可を設定するには、どのコマンドを使えばよいかを選択してください。  
 
+→  
+xhost +remotepc  
+
 ---
 
 ### 8.4
 
 ディスプレイマネージャをすべて選択してください。  
 
+→  
+ディスプレイマネージャーかウィンドウマネージャーか。
+ここら辺の違いと代表的なソフトをまとめておく。  
+
+LightDM,SDDM
+
 ---
 
 ### 8.5
 
-ネットワーク経由でリモートホストのXクライアントがローカルホストのXサーバーを利用したい場合、リモート干す値で設定すべき環境変数を記述してください。
+ネットワーク経由でリモートホストのXクライアントがローカルホストのXサーバーを利用したい場合、リモートホストで設定すべき環境変数を記述してください。
+
+→  
+DISPLAY  
 
 ---
 
@@ -158,4 +335,7 @@ RemoteDesktopProtocol
 ### 8.7
 
 Shiftキーと他のキーを同時に押すことが出来ないユーザーのために提供されている、Shiftキーを一度押すと、  
-他のキーを押すまでShiftキーがアクティブな状態のままになる昨日のことを何と呼びますか？  
+他のキーを押すまでShiftキーがアクティブな状態のままになる機能のことを何と呼びますか？  
+
+→  
+スティッキーキー  
