--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -42,9 +42,26 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 というか、メーカーがペットボトルバージョンも出してるので問題ないだろう。
 黒酢とか強めやつはちょっと考えたほうがいいっぽい。  
 
-
+●布団のセットアップ  
 [寝床が暖かくなる毛布の順番](https://weathernews.jp/s/topics/201901/070075/)  
 やっぱり毛布を一番下にするのがベストらしい。
+
+## Amazon系
+
+### ブラックフライデーのポイント
+
+2021/11/28 Sun  
+ブラックフライデー等の大型セールで1万円購入したらポイントプレゼント的なキャンペーンがあるが、あれは定期便も対象になることを確認した。  
+ただ、スマホから決済した分のボーナスポイントはもらえないと思うので注意。  
+
+### Audibleの休会
+
+期間は3か月(90日)。  
+年に1回だけ休止できる模様。  
+
+### レンタルした映画
+
+視聴中に返却時間が来たら、見ていても途中で止まる。  
 
 ---
 
