勉強したいこと追加

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -197,6 +197,96 @@ git revert
 [base64ってなんぞ？？理解のために実装してみた](https://qiita.com/PlanetMeron/items/2905e2d0aa7fe46a36d4)  
 https://wa3.i-3-i.info/word11338.html
 
+https://e-words.jp/w/CLR.html
+
+sqlmapper query where in @
+https://stackoverflow.com/questions/8388093/select-from-x-where-id-in-with-dapper-orm
+https://stackoverflow.com/search?q=dapper+where+in+
+``` C#
+
+        /// <summary>
+        /// 一覧を取得
+        /// </summary>
+        /// <param name="SettlementIDList">精算ID</param>
+        /// <returns>売掛入金精算IDリスト</returns>
+        public IEnumerable<TCs_AccountsReceivablePaymentSettleIDList> GetList(IEnumerable<string> SettlementIDList)
+        {
+            StringBuilder selectQuery = new StringBuilder()
+                .AppendLine("SELECT ")
+                .Append(GetFields())
+                .AppendLine("FROM [TCs_AccountsReceivablePaymentSettleIDList]")
+                .AppendLine("WHERE [SettlementID] IN @settlementIDList")
+                .AppendLine("ORDER BY")
+                .AppendLine("    [AccountsReceivablePaymentID],")
+                .AppendLine("    [SettlementID]");
+            return _DapperAction.GetDataListByQuery<TCs_AccountsReceivablePaymentSettleIDList>(
+                ConnectionTypes.Data,
+                selectQuery.ToString(),
+                new { settlementIDList = SettlementIDList }
+            );
+        }
+```
+
+sql server 0埋め
+https://teratail.com/questions/40337
+
+C#で0埋めする方法
+https://santerabyte.com/c-sharp-zero-padding/
+
+C# foreach index
+https://ufcpp.net/blog/2016/12/tipsindexedforeach/
+
+
+sql join 文字列結合して
+https://buralog.jp/sql-join-like-operator/
+``` C#
+        /// <summary>
+        /// 売掛入金伝票一覧を取得
+        /// </summary>
+        /// <returns></returns>
+        /// <remarks>
+        /// F2一覧からの取得処理
+        /// </remarks>
+        public IEnumerable<AccountsReceivablePaymentListItem> GetAccountsReceivablePaymentList(AccountsReceivablePaymentListCondition condition)
+        {
+            var query = new StringBuilder()
+                .AppendLine("SELECT")
+                .AppendLine("    0 AS [IsSelectedCancel],")
+                .AppendLine("    CASE WHEN [TFr_Slip].[SettlementID] IS NULL THEN 0 ELSE 1 END AS [IsSettled],")
+                .AppendLine("    [TCs_AccountsReceivableDetail].[SettlementID],")
+                .AppendLine("    [TRe_ReservationPlayer].[AccountNo],")
+                .AppendLine("    [TRe_ReservationPlayer].[Name] AS [AttendeeName],")
+                .AppendLine("    [TCs_AccountsReceivableDetail].[AccountName],")
+                .AppendLine("    [TCs_AccountsReceivableDetail].[DepositAmount] AS [AccountsReceivable]")
+                .AppendLine("FROM")
+                .AppendLine("    [TFr_Slip]")
+                .AppendLine("    JOIN [TRe_ReservationPlayer]")
+                .AppendLine("    ON [TFr_Slip].[OfficeCD] = [TRe_ReservationPlayer].[OfficeCD]")
+                .AppendLine("    AND [TFr_Slip].[SettlementPlayerNo] = [TRe_ReservationPlayer].[PlayerNo]")
+                .AppendLine("    JOIN [TCs_AccountsReceivablePayment]")
+                .AppendLine("    ON [TFr_Slip].[OfficeCD] = [TCs_AccountsReceivablePayment].[OfficeCD]")
+                .AppendLine("    AND CONCAT([TFr_Slip].[SlipID],FORMAT([TFr_Slip].[DetailNo],'000000')) = [TCs_AccountsReceivablePayment].[PaymentSlipID]")
+                .AppendLine("    JOIN [TCs_AccountsReceivablePaymentSettleIDList]")
+                .AppendLine("    ON [TCs_AccountsReceivablePayment].[AccountsReceivablePaymentID] = [TCs_AccountsReceivablePaymentSettleIDList].[AccountsReceivablePaymentID]")
+                .AppendLine("    JOIN [TCs_AccountsReceivableDetail]")
+                .AppendLine("    ON [TCs_AccountsReceivablePaymentSettleIDList].[SettlementID] = [TCs_AccountsReceivableDetail].[SettlementID]")
+                .AppendLine("WHERE")
+                .AppendLine("    [TFr_Slip].[SlipID] = @slipID");
+            return _DapperAction.GetDataListByQuery<AccountsReceivablePaymentListItem>(
+                ConnectionTypes.Data,
+                query.ToString(),
+                new { slipID = condition.SlipID }
+            );
+        }
+```
+
+
+名詞とは
+https://ja.wikipedia.org/wiki/%E5%90%8D%E8%A9%9E
+
+fix fixed
+https://jp.blog.voicetube.com/phrases/fixed/
+
 ---
 
 ## 現在進行形
