シェル進めた

--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -10,8 +10,7 @@
 ## exportコマンド  
 
 環境変数やシェル変数を設定するコマンド。  
-環境変数を定義する。  
-シェル変数を環境変数に、環境変数をシェル変数に変更する。  
+環境変数を定義したり、シェル変数を環境変数に、環境変数をシェル変数に変更する。  
 
 ``` txt
 export [オプション] [変数名[=値]…]
@@ -36,9 +35,23 @@ export [オプション] [変数名[=値]…]
 
 ---
 
+## envコマンド
+
+環境変数が表示される。  
+
+---
+
 ## printenvコマンド
 
 現在設定されている環境変数を確認するコマンド  
+
+---
+
+## setコマンド
+
+シェル変数と環境変数を表示する。  
+環境変数確認のための問題で大体セットでついてくる奴。  
+詳しくは102の範囲なのでそっちでやる。  
 
 ---
 
@@ -130,3 +143,22 @@ SUIDが設定されているファイルを探したい場合は「u」を付け
 ファイルのタイムスタンプを変更するコマンド。  
 存在しないファイル名を指定することで、内容の入っていないファイルを新規作成する機能も持っている。  
 なので、本来の使い方はされず、もっぱらファイルを作るコマンドと化している。  
+
+---
+
+## catコマンド
+
+ファイルを連結するためのコマンド。  
+conCATenate(繋ぐ、連結する)  
+ファイルの内容をサクッと確認するためにも使われる。  
+
+``` txt
+car [オプション] ファイル1 ファイル2 ...
+
+オプション
+-n → 行番号を付ける。
+-b → 行番号を付ける。但し空白行には付けない。
+-s → 連続した空行を1行にする。
+
+他にも色々。101で出たのは-nだけ。
+```
