--- a/LPIC/102/7.シェルとシェルスクリプト_問題.md
+++ b/LPIC/102/7.シェルとシェルスクリプト_問題.md
@@ -1,30 +1,221 @@
-# 7.シェル、スクリプト
-
-
-
-
-``` sh
-while read USERNAME
-do
-    useradd $USERNAME
-    echo $USERNAME | passwd --stdin $USERNAME
-done < $1
-
-```
+# シェル、スクリプト問題
 
 ---
 
-## 小豆本問題
+## 1 ○
 
-7.4  
-次のスクリプトを実行した際、変数「$#」に入る値を選択してください。  
-$ ./testscript args1 args2
+ユーザーのホームディレクトリ直下のファイルで、bashシェル環境のカスタマイズに使用されるものはどれか？1つ。  
 
-→
-・変数「$#」に入る値→引数の数。
-・$0 には ./testscript
-・$1 には args1
-・$2 には args2
+→  
+D. .bashrcと.bash_profile  
+
+bash.confなるものはなかったはず。  
+後、隠しファイルなので「.」は必須。  
+
+---
+
+## 2 ○
+
+bashをログインシェルとする全てのユーザーが共通して使用可能な変数と値を設定する場合に適切なものはどれか？1ツ。  
+
+→  
+B. /etc/profile  
+
+小豆本の時もそうだったけど、読んで字のごとくだから、選択肢として出された場合にはすぐに応えられる。  
+
+---
+
+## 3 ○
+
+bashをログインシェルとするユーザーがログインすると、どの順番で設定ファイルを読み取りますか？1つ。  
+
+→  
+
+順番の問題からは逃れられないか。  
+だからこそ、あそこまで一生懸命説明してるんだろうけど。  
+実質Bしか無くないか？  
+最初にetcを読んだ後に、ホームディレクトリの3ファイルを読み取るって話だった気がするが？  
+
+B. /etc/profile -> .bash_profile -> .bash_login -> .profile  
+
+---
+
+## 4 △
+
+~/.bash_profileの説明で正しいものはどれか？2つ。  
+
+→  
+よくわからないけど、BとCで。  
+当たった。△にしておこう。
+
+→  
+~/.bash_profileはbashが読み取って実行するファイルなので読み取り件が必要だが、実行権は必要ない。  
+~/.bash_profileはユーザーが自分の閑居うをカスタマイズするためのファイルでもあるので、ユーザーの読み書き権限が設定されている。  
+
+---
+
+## 5
+
+コマンドcmdの実行結果をシェル変数varに格納するコマンドラインはどれか？2つ。  
+
+→  
+いやー、わからんな。  
+シングルだか、ダブルだかで結果が変わったのは覚えているが。  
+シングルは完璧に文字列として扱う。  
+ダブルはコマンド部分はコマンドとして実行するって話だっけか？  
+バッククオートは忘れた。  
+
+BとDで。  
+BとC出した。意外といい線行ってた。  
+
+→  
+
+コマンドの実行結果をシェル変数に代入する方法  
+1.コマンドを`$()`で囲んで、その結果をシェル変数に代入する。  
+2.コマンドをバッククオート「`」で囲んでその結果をシェル変数に代入する。  
+
+バッククオートで囲めばコマンドは実行される。  
+ダブルクォートも基本的には文字列だが、シングルとは別のルールがあった気がする。  
+
+---
+
+## 6 ×
+
+一連の処理を子シェルではなく、現在のシェルの中で実行したい場合、適切なものを1つ選択せよ。  
+
+→  
+execがあればそれだが、ない。  
+functionとdeclareは明らかに違う。  
+`$bash プログラム名`はありそうではあるが、確信が持てない。  
+
+Bにしてみるか。  
+
+Cだった。  
+あー。よく問題を読んでみれば、一連の処理って書いてあるな。関数として定義して実行するって意味ならfunctionしかないわな。  
+
+`$bash 処理プログラム名` or 1行目に`#! /bin/bash`と記述したシェルスクリプトをコマンドとして実行した場合でも普通に実行できるらしい。  
+しかし、解釈実行するので、子シェルを新たに生成する。  
+
+---
+
+## 7 ○
+
+実行すると"Hello"と表示する関数func1を定義したい。1つ。  
+
+→  
+A . `function func1() { echo Hello; }`
+
+---
+
+## 8 ×
+
+現在実行中のシェルのシェル変数VALをサブプロセス(子プロセス)から参照できるようにするコマンドはどれか？1つ  
+
+→  
+B. `set $VAL`  
+
+やベーわ。  
+あぁ？そういう解釈？シェル変数を環境変数にすることで、サブプロセスから参照できるようになる理論。  
+exportコマンドの引数に指定するシェル変数の先頭には`$`は付かない。覚えとけ。  
+
+---
+
+## 9
+
+---
+
+## 10
+
+---
+
+## 12
+
+---
+
+## 13
+
+---
+
+## 14
+
+---
+
+## 15
+
+---
+
+## 16
+
+---
+
+## 17
+
+---
+
+## 18
+
+---
+
+## 19
+
+---
+
+## 20
+
+---
+
+## 21
+
+---
+
+## 22
+
+---
+
+## 23
+
+---
+
+## 24
+
+---
+
+## 25
+
+---
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ---
 
