シェル少しｓ

--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -21,6 +21,8 @@ export [オプション] [変数名[=値]…]
 -p → 全てのエクスポートされた変数と関数を全て一覧表示する。
 ```
 
+**exportコマンドの引数に指定するシェル変数の先頭には`$`は付かない**  
+
 シェル変数DISPLAYを定義  
 `DISPLAY=localpc:0`  
 
