--- a/LPIC/102/7.シェルとシェルスクリプト.md
+++ b/LPIC/102/7.シェルとシェルスクリプト.md
@@ -82,7 +82,7 @@ unset シェル関数名
 ### declareコマンド
 
 変数を宣言するコマンド。  
-定義済み変数や関数の定義内容を表示する。  
+定義済み変数や関数の定義内容も表示する。  
 declare : 宣言する。  
 
 ``` txt
@@ -97,6 +97,26 @@ declare [オプション] [名前=値]
 ```
 
 ### setコマンド
+
+シェルの設定を確認、変更するコマンド。  
+101の時は環境変数を確認するためのコマンドとして認識していた物。  
+シェル変数、関数も確認できる。  
+**オプションの有効は「-」オプションの無効は「+」**  
+
+``` txt
+set [-o][+o] [オプション]
+
+-oでオプション有効
++oでオプション無効
+
+オプション
+allexport :: 作成・変更した変数を自動的にエクスポートする。
+emacs :: emacs風のキーバインドにする。
+ignoreeof :: Ctrl + Dによってログアウトしないようにする。
+noclobber :: 出力リダイレクトによる上書きを禁止する。
+noglob :: メタキャラクタを使ったファイル名展開を無効にする。
+vi :: vi風のキーバインドにする。
+```
 
 ### bashの設定ファイル
 
@@ -118,9 +138,34 @@ bashのログイン時に実行される。
 
 ### ~/.bash_profileファイル
 
+ユーザー独自の設定が格納されたファイル。  
+ログインした場合、2番目に読みこまれる。  
+
 ### ~/.bashrcファイル
 
+対話型シェルが起動されるたびに実行される。  
+システムを利用する全ユーザーに対する設定は/etc/bashrcに記述し、~/.bashrcから呼び出すようになっている。  
+
 ### 読み込み順
+
+bashをログインシェルとして起動した場合  
+
+1. /etc/profile  
+2. /etc/bash.bashrc ← 設定によって読みこんだり読みこまなかったりする  
+3. ~/.bash_profile  
+4. ~/.bash_login  
+5. ~/.profile  
+6. ~/.bashrc  
+7. /etc/bashrc  
+
+bashコマンドを実行してbashを起動した場合  
+
+1. ~/.bashrc  
+2. /etc/bashrc  
+
+### 非ログインシェル
+
+ユーザーがログインした後に、ターミナルエミュレーターを開くことで起動するシェルを実行したり、コマンドラインから別のシェルを起動したりしたシェルの事  
 
 ---
 
@@ -166,6 +211,8 @@ bashの組み込みコマンド。
 
 ### シェルスクリプトの特殊変数
 
+シェル変数とも言うらしい。  
+
 ``` txt
 $0 → シェルスクリプトファイル名  
 $1 → 1番目の引数。※ 2番目の引数の場合は $2 と指定する。  
@@ -177,6 +224,7 @@ $* → 全ての引数 ( 区切りは環境変数IFSで指定したもの )
 ```
 
 シェルスクリプトの実行後 `echo $?` と実行して 0 が帰ってくるならスクリプトが正常終了したことが分かる。  
+bashのプロンプトで`echo $$`を実行した場合のプロセスIDはシェル自身のプロセスIDが格納される。  
 
 ### if文
 
